# OGL_PointCloud

./: CMakeLists.txt  README.md  main.cpp
datasets/param/: 0000.xml  0001.xml  0002.xml  0003.xml
include/: PointCloud.cuh  camera.h
shaders/: camera.fs  camera.vs
src/: PointCloud.cu
